force-app/main/default/objects/Aircraft__c/fields/IsAvailable__c.field-meta.xml
<CustomField>
    <fullName>IsAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAvailable</label>
    <type>Checkbox</type>
</CustomField>