force-app/main/default/objects/Aircraft__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>Boeing</fullName>
            </value>
            <value>
                <fullName>Cessna</fullName>
            </value>
            <value>
                <fullName>Gulfstream</fullName>
            </value>
            <value>
                <fullName>Bombardier</fullName>
            </value>
            <value>
                <fullName>Embraer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>