force-app/main/default/objects/Aircraft__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <label>Model Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Manufacturer__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boeing 787</fullName>
            </value>
            <value>
                <fullName>Boeing 777</fullName>
            </value>
            <value>
                <fullName>Airbus A350</fullName>
            </value>
            <value>
                <fullName>Bombardier CRJ900</fullName>
            </value>
            <value>
                <fullName>Boeing 737</fullName>
            </value>
            <value>
                <fullName>Embraer E190</fullName>
            </value>
            <value>
                <fullName>Gulfstream G650</fullName>
            </value>
            <value>
                <fullName>Cessna Citation X</fullName>
            </value>
            <value>
                <fullName>Airbus A320</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>