force-app/main/default/objects/Aircraft__c/fields/Next_Scheduled_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Maintenance__c</fullName>
    <label>Next Scheduled Maintenance</label>
    <type>Date</type>
</CustomField>