force-app/main/default/objects/Aircraft__c/validationRules/FlightStatusCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>FlightStatusCheck</fullName>
    <active>true</active>
    <description>Check if the related Flight status is &quot;Post Flight Check&quot; or not</description>
    <errorConditionFormula>$ObjectType.Flight__c.Fields.Status__c   =  &apos;Post Flight Check&apos;</errorConditionFormula>
    <errorDisplayField>IsAvailable__c</errorDisplayField>
    <errorMessage>Aircraft is on duty for a flight.</errorMessage>
</ValidationRule>