force-app/main/default/objects/Aircraft__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Manufacturer__c</columns>
    <columns>Model_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Next_Scheduled_Maintenance__c</columns>
    <columns>IsAvailable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>